--- a/estilo/style.css
+++ b/estilo/style.css
@@ -52,7 +52,7 @@ header p{
     color: white;
     max-width: 500px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     padding: 0px 10px 0px 10px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.493);
 }
